--- a/src/components/layout/Sidebar.css
+++ b/src/components/layout/Sidebar.css
@@ -1,6 +1,6 @@
 .Main{
     width: 300px;
-    height: 1350px;
+    height: 1500px;
     background-color: rgb(0, 19, 70)
 }
 
@@ -50,6 +50,8 @@
     align-items: center;
     padding: 0 25px;
     gap: 10px;
+        color: rgba(157, 164, 174, 1);
+    
 }
 
 
@@ -94,4 +96,14 @@
 .side h2{
         color: rgba(157, 164, 174, 1);
         
+}
+
+.dt{
+    padding: 10px 70px;
+            color: rgba(157, 164, 174, 1);
+            font-family: cursive;
+}
+
+.dt p{
+    padding: 7px 0;
 }
