--- a/src/pages/Analytics.css
+++ b/src/pages/Analytics.css
@@ -94,3 +94,114 @@ header .card img{
 }
 
 
+
+
+/* traffic */
+
+.traffic{
+    width: 100%;
+    background-color: rgba(255, 255, 255, 1);
+    border-radius: 12px;
+    padding: 30px 40px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 25px;
+}
+
+ .traffic h1{
+    margin-top: 25px;
+    margin-bottom: 30px;
+}
+
+/*
+
+.traffic .card .visit .card{
+    width: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;    
+}  
+
+
+
+
+.coun .card{
+    width: 100%;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    gap: 10px;
+}
+
+.coun{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgba(248, 249, 250, 1);
+}
+
+
+.count .card {
+    width: 100%;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    gap: 10px;
+}
+
+.count {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+} */
+
+
+
+
+
+
+
+/* Table */
+
+
+
+
+.const{
+        width: 62%;
+}
+.table1 {
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid #ddd;
+    /* border-radius: 10px; */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: left;
+    padding: 20px;
+}
+
+.table1 th, td {
+    padding: 15px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    text-align: left;
+}   
+
+
+.h3{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 25px;
+    color: rgba(108, 115, 127, 1);
+}
